--- a/src/main/resources/templates/fragments/commonLogin.html
+++ b/src/main/resources/templates/fragments/commonLogin.html
@@ -8,9 +8,9 @@
     <title th:text="${metaTitle}"></title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-    <script src="/bootstrap/js/bootstrap.bundle.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="/js/jquery/jquery-3.6.4.min.js"></script>
     <script src="/js/util.js"></script>
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.css"/>
 </th:block>
 </html>
