--- a/src/main/resources/templates/layout/defaultLayout.html
+++ b/src/main/resources/templates/layout/defaultLayout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" lang="ko">
 <head>
-    <th:block th:replace="~{fragments/commonHead}"></th:block>
+    <th:block th:replace="~{fragments/commonLogin}"></th:block>
 </head>
 <body>
 <th:block layout:fragment="content"/>
