[feat] : 사장님 정보 수정 페이지 추가 및 기타 수정

--- a/src/main/resources/templates/fragments/owner/commonSideBar.html
+++ b/src/main/resources/templates/fragments/owner/commonSideBar.html
@@ -20,7 +20,7 @@
                 </a>
                 <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
-                        <a href="components-alerts.html">
+                        <a href="/owner/profile/info">
                             <i class="bi bi-circle"></i><span>사장님 정보 수정</span>
                         </a>
                     </li>
