--- a/src/main/resources/templates/fragments/owner/commonSideBar.html
+++ b/src/main/resources/templates/fragments/owner/commonSideBar.html
@@ -38,12 +38,12 @@
                 </a>
                 <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
-                        <a href="forms-elements.html">
+                        <a href="/owner/store/info">
                             <i class="bi bi-circle"></i><span>가게 정보 보기</span>
                         </a>
                     </li>
                     <li>
-                        <a href="forms-layouts.html">
+                        <a href="/owner/store/form">
                             <i class="bi bi-circle"></i><span>가게 정보 등록/수정</span>
                         </a>
                     </li>
