--- a/src/main/resources/templates/views/owner/profile/ownerInfo.html
+++ b/src/main/resources/templates/views/owner/profile/ownerInfo.html
@@ -26,8 +26,8 @@
                     <div class="card">
                         <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
 
-                            <img th:src="${userVO.profileImage != null} ? ${userVO.profileImage.savedPath} : '/img/profile-img.jpg'"
-                                 alt="Profile" class="rounded-circle">
+                            <img th:src="${userVO.profileImage != null} ? ${userVO.profileImage.savedPath} : '/img/default-user.svg'"
+                                 alt="Profile" class="rounded-circle" id="cardProfileImage">
                             <h2 th:text="${userVO.name}"></h2>
                             <!--                            <h3>Web Designer</h3>-->
                             <div class="social-links mt-2">
