[refactor] : 현재 url에 따라 sidebar ui 수정

--- a/src/main/resources/templates/fragments/owner/commonSideBar.html
+++ b/src/main/resources/templates/fragments/owner/commonSideBar.html
@@ -7,43 +7,58 @@
         <ul class="sidebar-nav" id="sidebar-nav">
 
             <li class="nav-item">
-                <a class="nav-link " href="index.html">
+                <a
+                        class="nav-link"
+                        th:classappend="${url ne '/owner/main' ? 'collapsed' : ''}"
+                        href="/owner/main">
                     <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
                 </a>
             </li><!-- End Dashboard Nav -->
 
             <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-menu-button-wide"></i><span>사장님 정보</span><i
-                        class="bi bi-chevron-down ms-auto"></i>
+                <a
+                        class="nav-link"
+                        th:classappend="${(url ne '/owner/profile/info' && url ne '/owner/profile/password') ? 'collapsed' : ''}"
+                        data-bs-target="#components-nav" data-bs-toggle="collapse"
+                        href="#">
+                    <i class="bi bi-menu-button-wide"></i>
+                    <span>사장님 정보</span>
+                    <i class="bi bi-chevron-down ms-auto"></i>
                 </a>
-                <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <ul id="components-nav" class="nav-content collapse"
+                    th:classappend="${(url eq '/owner/profile/info' || url eq '/owner/profile/password') ? 'show' : ''}"
+                    data-bs-parent="#sidebar-nav">
                     <li>
-                        <a href="/owner/profile/info">
+                        <a href="/owner/profile/info" th:classappend="${url eq '/owner/profile/info' ? 'active' : ''}">
                             <i class="bi bi-circle"></i><span>사장님 정보 수정</span>
                         </a>
                     </li>
                     <li>
-                        <a href="/owner/profile/password">
-                            <i class="bi bi-circle"></i><span>비밀번호 변경</span>
+                        <a href="/owner/profile/password"
+                           th:classappend="${url eq '/owner/profile/password' ? 'active' : ''}">
+                            <i class="bi bi-circle"
+                            ></i><span>비밀번호 변경</span>
                         </a>
                     </li>
                 </ul>
             </li><!-- End Components Nav -->
 
             <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+                <a class="nav-link" th:classappend="${url ne '/owner/store/form' ? 'collapsed' : ''}"
+                   data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
                     <i class="bi bi-journal-text"></i><span>가게 정보</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
-                <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <ul id="forms-nav" class="nav-content collapse"
+                    th:classappend="${url eq '/owner/store/form' ? 'show' : ''}"
+                    data-bs-parent="#sidebar-nav">
                     <li>
                         <a href="/owner/store/info">
                             <i class="bi bi-circle"></i><span>가게 정보 보기</span>
                         </a>
                     </li>
                     <li>
-                        <a href="/owner/store/form">
+                        <a href="/owner/store/form" th:classappend="${url eq '/owner/store/form' ? 'active' : ''}">
                             <i class="bi bi-circle"></i><span>가게 정보 등록/수정</span>
                         </a>
                     </li>
