--- a/src/main/resources/templates/views/owner/profile/ownerPassword.html
+++ b/src/main/resources/templates/views/owner/profile/ownerPassword.html
@@ -9,7 +9,7 @@
     <main id="main" class="main">
 
         <div class="pagetitle">
-            <h1>Profile</h1>
+            <h1>비밀번호 변경</h1>
             <nav>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/owner/main">Home</a></li>
