[feat] : 메뉴 (추가, 수정, 삭제, 옵션그룹 연결), 메뉴 그룹 (삭제, 메뉴 순서변경), 옵션 그룹(삭제)

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -296,6 +296,11 @@ h6 {
 .accordion-button:focus {
     outline: 0;
     box-shadow: none;
+    z-index: auto
+}
+
+.accordion-button:hover {
+    z-index: auto;
 }
 
 .accordion-button:not(.collapsed) {
