[feat] : 사장님 페이지 - 메뉴 미리보기 기능

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -263,7 +263,7 @@ h6 {
 
 /* Close Button */
 .btn-close {
-    background-size: 25%;
+    background-size: 60%;
 }
 
 .btn-close:focus {
@@ -1336,6 +1336,10 @@ h6 {
 
 .bg-gray-light {
     background-color: #f7f7f7;;
+}
+
+.text-gray-light {
+    color: #f7f7f7;
 }
 
 .bg-gray {
