--- a/src/main/resources/templates/fragments/owner/menu/menuPreviewModal.html
+++ b/src/main/resources/templates/fragments/owner/menu/menuPreviewModal.html
@@ -8,7 +8,8 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="menuPreviewModalLabel">메뉴 미리보기</h1>
-                    <button class="btn-close btn-lg" data-bs-dismiss="modal" type="button"></button>
+                    <button class="btn-close btn-lg" data-bs-dismiss="modal" id="menuPreviewModalCloseBtn"
+                            type="button"></button>
                 </div>
                 <div class="modal-body pt-0 px-0">
                     <div class="card pt-3 mb-3">
