--- a/src/main/resources/templates/fragments/owner/menu/menuGroupPreviewModal.html
+++ b/src/main/resources/templates/fragments/owner/menu/menuGroupPreviewModal.html
@@ -19,11 +19,19 @@
                         </div>
                     </div>
                     <div class="border-bottom px-3 pb-2" th:each="menuVO : ${menuGroupVO.menuVOList}">
-                        <div class="card-title pb-0 mb-2">
-                            <div>[[${menuVO.menuTitle}]]</div>
-                            <div class="fs-0-8 text-gray">[[${menuVO.menuExplanation}]]</div>
+                        <div class="row g-3">
+                            <div class="col-8">
+                                <div class="card-title pb-0 mb-2">
+                                    <div>[[${menuVO.menuTitle}]]</div>
+                                    <div class="fs-0-8 text-gray">[[${menuVO.menuExplanation}]]</div>
+                                </div>
+                                <div th:text="${#numbers.formatInteger(menuVO.menuPrice, 3, 'COMMA')} + '원'"></div>
+                            </div>
+                            <div class="col-4 d-flex justify-content-center">
+                                <img class="img-fluid" th:if="${menuVO.menuImage}"
+                                     th:src="${menuVO.menuImage.savedPath}">
+                            </div>
                         </div>
-                        <div th:text="${#numbers.formatInteger(menuVO.menuPrice, 3, 'COMMA')} + '원'"></div>
                     </div>
                 </div>
             </div>
