--- a/src/main/resources/templates/fragments/owner/menu/menuPreviewModal.html
+++ b/src/main/resources/templates/fragments/owner/menu/menuPreviewModal.html
@@ -14,6 +14,7 @@
                 <div class="modal-body pt-0 px-0">
                     <div class="card pt-3 mb-3">
                         <div class="card-body">
+                            <img class="img-fluid" th:if="${menuVO.menuImage}" th:src="${menuVO.menuImage.savedPath}">
                             <h2>[[${menuVO.menuTitle}]]</h2>
                             <div>[[${menuVO.menuExplanation}]]</div>
                         </div>
